Fix HTML encoding issues in accueil.html

--- a/accueil.html
+++ b/accueil.html
@@ -106,7 +106,7 @@
       <a href="#">Contact</a>
       <a href="https://ent.colleges05.fr/auth/saml/wayf?callback=https%3A%2F%2Fent.colleges05.fr%2Ftimeline%2Ftimeline#/" target="_blank">
         <img src="https://ent.colleges05.fr/assets/themes/ent05/img/logo.png" alt="Logo ENT">
-        ENT Collèges 05
+        ENT
       </a>
     </nav>
   </div>
@@ -135,3 +135,4 @@
   </script>
 </body>
 </html>
+
