Enhance sidebar with separator and Pronote link
Added a separator and a new link to Pronote in the sidebar.

--- a/accueil.html
+++ b/accueil.html
@@ -73,6 +73,11 @@
       text-decoration: underline;
     }
 
+    .separator {
+      border-top: 1px solid rgba(255,255,255,0.2);
+      margin: 20px 0;
+    }
+
     .content {
       margin-left: 260px;
       padding: 40px;
@@ -104,9 +109,16 @@
       <a href="#">À propos</a>
       <a href="#">Services</a>
       <a href="#">Contact</a>
+
+      <div class="separator"></div>
+
       <a href="https://ent.colleges05.fr/auth/saml/wayf?callback=https%3A%2F%2Fent.colleges05.fr%2Ftimeline%2Ftimeline#/" target="_blank">
         <img src="https://ent.colleges05.fr/assets/themes/ent05/img/logo.png" alt="Logo ENT">
-        ENT
+        ENT Collèges 05
+      </a>
+      <a href="https://0050022x.index-education.net/pronote/" target="_blank">
+        <img src="https://github.com/pcochet74-dotcom/PWA/blob/9898f340725eb733388f603a5670bc937c7c5396/PRONOTE-horizontal.png?raw=true" alt="Logo Pronote">
+        Pronote
       </a>
     </nav>
   </div>
@@ -135,4 +147,3 @@
   </script>
 </body>
 </html>
-
