--- a/accueil.html
+++ b/accueil.html
@@ -114,7 +114,7 @@
 
       <a href="https://ent.colleges05.fr/auth/saml/wayf?callback=https%3A%2F%2Fent.colleges05.fr%2Ftimeline%2Ftimeline#/" target="_blank">
         <img src="https://ent.colleges05.fr/assets/themes/ent05/img/logo.png" alt="Logo ENT">
-        ENT Collèges 05
+        ENT
       </a>
       <a href="https://0050022x.index-education.net/pronote/" target="_blank">
         <img src="https://github.com/pcochet74-dotcom/PWA/blob/9898f340725eb733388f603a5670bc937c7c5396/PRONOTE-horizontal.png?raw=true" alt="Logo Pronote">
