Change CSS link to raw GitHub URL
Updated the CSS link to use a raw GitHub URL.

--- a/accueil.html
+++ b/accueil.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Accueil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <!-- ✅ Lien CSS brut GitHub -->
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/pcochet74-dotcom/PWA/cd213fe6293760c53bc9d0d4fdd02703f8fed69b/Style.ccs">
 </head>
 <body>
   <div class="sidebar" id="sidebar">
