--- a/accueil.html
+++ b/accueil.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Accueil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- ✅ Lien CSS brut GitHub -->
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/pcochet74-dotcom/PWA/cd213fe6293760c53bc9d0d4fdd02703f8fed69b/Style.ccs">
+  <!-- ✅ Lien vers le fichier CSS brut sur GitHub -->
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/pcochet74-dotcom/PWA/cd213fe6293760c53bc9d0d4fdd02703f8fed69b/Style.css">
 </head>
 <body>
   <div class="sidebar" id="sidebar">
