--- a/accueil.html
+++ b/accueil.html
@@ -4,123 +4,31 @@
   <meta charset="UTF-8">
   <title>Accueil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0c1e3c;
-      color: white;
-      min-height: 100vh;
-    }
-
-    #toggleSidebar {
-      position: fixed;
-      top: 15px;
-      left: 15px;
-      z-index: 1000;
-      background: rgba(255, 255, 255, 0.1);
-      border: none;
-      color: white;
-      font-size: 24px;
-      cursor: pointer;
-      padding: 8px 12px;
-      border-radius: 6px;
-      backdrop-filter: blur(4px);
-    }
-
-    .sidebar {
-      width: 220px;
-      background: rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(8px);
-      box-shadow: 0 0 20px rgba(0,0,0,0.4);
-      padding: 20px;
-      transition: transform 0.3s ease;
-      display: flex;
-      flex-direction: column;
-      position: fixed;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      z-index: 999;
-    }
-
-    .sidebar.hidden {
-      transform: translateX(-100%);
-    }
-
-    .sidebar nav {
-      margin-top: 60px;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .sidebar nav a {
-      color: #00ff99;
-      text-decoration: none;
-      margin: 10px 0;
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-    }
-
-    .sidebar nav a img {
-      height: 24px;
-      margin-right: 8px;
-      vertical-align: middle;
-    }
-
-    .sidebar nav a:hover {
-      text-decoration: underline;
-    }
-
-    .separator {
-      border-top: 1px solid rgba(255,255,255,0.2);
-      margin: 20px 0;
-    }
-
-    .content {
-      margin-left: 260px;
-      padding: 40px;
-      transition: margin-left 0.3s ease;
-    }
-
-    .sidebar.hidden ~ .content {
-      margin-left: 60px;
-    }
-
-    h1 {
-      color: #00ff99;
-      font-size: 1.8em;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 1em;
-      color: rgb(220, 220, 220);
-    }
-  </style>
+  <!-- ✅ Lien vers style.css brut sur GitHub -->
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/pcochet74-dotcom/PWA/5dabb25b712117bc1b4cea5c586d6fa2c0773cf2/style.css">
 </head>
 <body>
-  <button id="toggleSidebar">☰</button>
-
   <div class="sidebar" id="sidebar">
+    <button onclick="toggleSidebar()">☰</button>
     <nav>
       <a href="#" onclick="showHome()">Accueil</a>
       <a href="#">À propos</a>
       <a href="#">Services</a>
       <a href="#">Contact</a>
 
-      <div class="separator"></div>
+      <hr style="border: none; border-top: 1px solid rgba(255,255,255,0.2); margin: 20px 0;">
 
       <a href="https://ent.colleges05.fr/auth/saml/wayf?callback=https%3A%2F%2Fent.colleges05.fr%2Ftimeline%2Ftimeline#/" target="_blank">
-        <img src="https://ent.colleges05.fr/assets/themes/ent05/img/logo.png" alt="Logo ENT">
+        <img src="https://ent.colleges05.fr/assets/themes/ent05/img/logo.png" alt="Logo ENT" style="height: 24px; vertical-align: middle; margin-right: 8px;">
         ENT
       </a>
       <a href="https://0050022x.index-education.net/pronote/" target="_blank">
-        <img src="https://github.com/pcochet74-dotcom/PWA/blob/9898f340725eb733388f603a5670bc937c7c5396/PRONOTE-horizontal.png?raw=true" alt="Logo Pronote">
+        <img src="https://github.com/pcochet74-dotcom/PWA/blob/9898f340725eb733388f603a5670bc937c7c5396/PRONOTE-horizontal.png?raw=true" alt="Logo Pronote" style="height: 24px; vertical-align: middle; margin-right: 8px;">
         Pronote
+      </a>
+      <a href="#" onclick="showCasierENT()">
+        <img src="https://ent.colleges05.fr/assets/themes/ent05/img/illustrations/logo.png" alt="Casier ENT" style="height: 24px; vertical-align: middle; margin-right: 8px;">
+        Casier ENT
       </a>
     </nav>
   </div>
@@ -131,19 +39,31 @@
   </main>
 
   <script>
-    const toggleBtn = document.getElementById('toggleSidebar');
-    const sidebar = document.getElementById('sidebar');
-    const content = document.getElementById('mainContent');
-
-    toggleBtn.addEventListener('click', () => {
+    function toggleSidebar() {
+      const sidebar = document.getElementById('sidebar');
       sidebar.classList.toggle('hidden');
-      content.style.marginLeft = sidebar.classList.contains('hidden') ? '60px' : '260px';
-    });
+    }
 
     function showHome() {
+      const content = document.getElementById('mainContent');
       content.innerHTML = `
         <h1>Bienvenue !</h1>
         <p>Ceci est la page d'accueil avec un volet latéral rétractable.</p>
+      `;
+    }
+
+    function showCasierENT() {
+      const content = document.getElementById('mainContent');
+      content.innerHTML = `
+        <h1>Casier ENT</h1>
+        <p>Voici un aperçu du casier ENT :</p>
+        <ul>
+          <li><a href="/rack/get/5c2d0f5f-c0eb-477d-93ca-df7be79124d9" target="_blank">Grandes invasions.pdf</a></li>
+          <li><a href="/rack/get/5d3a9f85-4533-4996-8b33-9684425d4400" target="_blank">527Europe.PNG</a></li>
+          <li><a href="/rack/get/c463f407-2f35-4a6d-b17d-9279c0297e0a" target="_blank">Invasions_barbares.pdf</a></li>
+          <li><a href="/rack/get/01479dcd-6d3e-4741-b63b-13f11955df41" target="_blank">empire_romain3.gif</a></li>
+          <li><a href="/rack/get/b96945b2-44a0-49b1-abff-6e1511818fe6" target="_blank">Carte Empire romain 118.jpg</a></li>
+        </ul>
       `;
     }
   </script>
