--- a/accueil.html
+++ b/accueil.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Accueil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- ✅ Lien vers style.css brut sur GitHub -->
-  <link rel="stylesheet" href="https://raw.githubusercontent.com/pcochet74-dotcom/PWA/5dabb25b712117bc1b4cea5c586d6fa2c0773cf2/style.css">
+  <!-- ✅ Lien vers style.css en local -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="sidebar" id="sidebar">
