Update CSS file reference in accueil.html
Renamed the CSS file from style.css to StyleAccuei.css.

--- a/accueil.html
+++ b/accueil.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Accueil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- ✅ Lien vers style.css en local -->
-  <link rel="stylesheet" href="style.css">
+  <!-- ✅ Lien vers ton fichier CSS renommé -->
+  <link rel="stylesheet" href="StyleAccuei.css">
 </head>
 <body>
   <div class="sidebar" id="sidebar">
