--- a/accueil.html
+++ b/accueil.html
@@ -5,7 +5,7 @@
   <title>Accueil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- ✅ Lien vers ton fichier CSS renommé -->
-  <link rel="stylesheet" href="StyleAccuei.css">
+  <link rel="stylesheet" href="StyleAccueil.css">
 </head>
 <body>
   <div class="sidebar" id="sidebar">
@@ -69,3 +69,4 @@
   </script>
 </body>
 </html>
+
