Fix login credentials and HTML encoding
Updated login credentials and fixed HTML encoding issues.

--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
     <p>Vous pouvez maintenant l’installer comme une vraie application !</p>
 
     <img class="login-image" src="guest.png" alt="Icône invité Windows">
-
     <form onsubmit="return handleLogin(event)">
       <label for="username">Nom d'utilisateur :</label>
       <input type="text" id="username" name="username" required>
@@ -188,7 +187,7 @@
       const password = document.getElementById('password').value;
 
       // Vérification simple en local
-      if (username === "p.cochet" && password === "PCfraise3008!") {
+      if (username === "User" && password === "1234") {
         window.location.href = "https://pcochet74-dotcom.github.io/PWA/accueil.html";
       } else {
         alert("Nom d'utilisateur ou mot de passe incorrect.");
@@ -213,3 +212,4 @@
   </script>
 </body>
 </html>
+
