Update index.html for login page redesign

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Ma PWA</title>
+  <title>PWA - Connexion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     @font-face {
@@ -187,7 +187,7 @@
       const password = document.getElementById('password').value;
 
       // Vérification simple en local
-      if (username === "User" && password === "1234") {
+      if (username === "PWA" && password === "1234") {
         window.location.href = "https://pcochet74-dotcom.github.io/PWA/accueil.html";
       } else {
         alert("Nom d'utilisateur ou mot de passe incorrect.");
@@ -212,4 +212,5 @@
   </script>
 </body>
 </html>
+
 
