--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
@@ -169,16 +168,31 @@
       <label for="password">Mot de passe :</label>
       <div class="password-wrapper">
         <input type="password" id="password" name="password" required>
-        <button type="button" class="toggle-password" id="toggleBtn" onclick="togglePassword()">&#xE052;</button>
+        <button type="button" class="toggle-password" id="toggleBtn" onclick="togglePassword()"></button>
       </div>
 
       <input type="submit" value="Se connecter">
 
       <div class="separator">ou</div>
 
+      <!-- Bouton Google Sign-In -->
+      <div id="g_id_onload"
+           data-client_id="430331795514-vc558sn22p3on0l8dvlr6ackdsdo7u3h.apps.googleusercontent.com"
+           data-callback="handleCredentialResponse"
+           data-auto_prompt="false">
+      </div>
+      <div class="g_id_signin" data-type="standard"></div>
+
+      <div class="separator">ou</div>
+
       <button type="button" class="create-account-btn" onclick="createAccount()">Créer un compte</button>
     </form>
+    <p id="status"></p>
   </div>
+
+  <!-- Script Google Identity -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
 
   <script>
     function handleLogin(event) {
@@ -186,7 +200,6 @@
       const username = document.getElementById('username').value;
       const password = document.getElementById('password').value;
 
-      // Vérification simple en local
       if (username === "PWA" && password === "1234") {
         window.location.href = "https://pcochet74-dotcom.github.io/PWA/accueil.html";
       } else {
@@ -209,8 +222,14 @@
         toggleBtn.innerHTML = "&#xE052;";
       }
     }
+
+    // Callback Google Sign-In
+    function handleCredentialResponse(response) {
+      const data = jwt_decode(response.credential);
+      console.log("Connecté avec Google :", data);
+      document.getElementById("status").innerText = "Bonjour " + data.email;
+      window.location.href = "https://pcochet74-dotcom.github.io/PWA/accueil.html";
+    }
   </script>
 </body>
 </html>
-
-
