--- a/accueil.html
+++ b/accueil.html
@@ -4,12 +4,65 @@
   <meta charset="UTF-8">
   <title>Accueil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- ✅ Lien vers ton fichier CSS renommé -->
   <link rel="stylesheet" href="StyleAccueil.css">
+  <style>
+    /* Bouton toggle toujours visible */
+    #toggleBtn {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      z-index: 1000;
+      background-color: #317EFB;
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      font-size: 20px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    /* Sidebar masquée */
+    .sidebar.hidden {
+      transform: translateX(-100%);
+    }
+
+    .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 220px;
+      height: 100%;
+      background-color: #0c1e3c;
+      color: white;
+      padding: 20px;
+      box-sizing: border-box;
+      transition: transform 0.3s ease;
+      overflow-y: auto;
+      z-index: 999;
+    }
+
+    .content {
+      margin-left: 240px;
+      padding: 20px;
+    }
+
+    .sidebar nav a {
+      display: block;
+      margin: 10px 0;
+      color: white;
+      text-decoration: none;
+    }
+
+    .sidebar nav a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
+  <!-- Bouton toggle toujours visible -->
+  <button id="toggleBtn" onclick="toggleSidebar()">☰</button>
+
   <div class="sidebar" id="sidebar">
-    <button onclick="toggleSidebar()">☰</button>
     <nav>
       <a href="#" onclick="showHome()">Accueil</a>
       <a href="#">À propos</a>
@@ -69,4 +122,3 @@
   </script>
 </body>
 </html>
-
