Refactor sidebar and content layout styles
Updated the sidebar and content styles for better layout and visibility.

--- a/accueil.html
+++ b/accueil.html
@@ -33,7 +33,7 @@
       background-color: #0c1e3c;
       color: white;
       padding: 20px;
-      padding-top: 60px; /* espace ajouté pour éviter chevauchement avec le bouton */
+      padding-top: 60px; /* espace pour éviter chevauchement avec le bouton */
       box-sizing: border-box;
       transition: transform 0.3s ease;
       overflow-y: auto;
@@ -42,14 +42,14 @@
 
     .content {
       margin-left: 240px;
-      padding: 60px 20px 20px 20px;
+      padding: 30px 20px 20px 20px; /* réduit pour remonter le contenu */
     }
 
-    /* Liens du ruban avec couleur personnalisée */
+    /* Liens du ruban avec couleur #32cd32 */
     .sidebar nav a {
       display: block;
       margin: 10px 0;
-      color: #00ff99;
+      color: #32cd32;
       text-decoration: none;
     }
 
@@ -173,3 +173,8 @@
   </script>
 </body>
 </html>
+
+  </script>
+</body>
+</html>
+
