--- a/accueil.html
+++ b/accueil.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+<html lang="fr"><head><style data-merge-styles="true"></style>
   <meta charset="UTF-8">
   <title>Accueil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,7 +42,7 @@
 
     .content {
       margin-left: 240px;
-      padding: 30px 20px 20px 20px;
+      padding: 30px 20px 20px 20px; /* réduit pour remonter le contenu */
     }
 
     /* Liens du ruban avec couleur #32cd32 */
@@ -83,10 +83,10 @@
     #weatherContainer {
       display: inline-block;
       background: #ffffff;
+      border: 2px solid #0c1e3c;
       border-radius: 8px;
       overflow: hidden;
-      /* Contour interne de 7px */
-      box-shadow: inset 0 0 0 7px #0c1e3c;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.12);
     }
 
     #widget_autocomplete_preview {
@@ -116,9 +116,8 @@
         ENT
       </a>
       <a href="https://0050022x.index-education.net/pronote/" target="_blank">
-        <img src="https://github.com/pcochet74-dotcom/PWA/blob/9898f340725eb733388f603a5670bc937c7c5396/PRONOTE-horizontal.png?raw=true" alt="Logo Pronote" style="height: 24px; vertical-align: middle; margin-right: 8px;">
-        Pronote
-      </a>
+        <img src="https://github.com/pcochet74-dotcom/PWA/blob/9898f340725eb733388f603a5670bc937c7c5396/PRONOTE-horizontal.png?raw=true" alt="Logo Pronote" style="height: 24px; vertical-align: middle; margin-right: 8px;">Pronote
+</a>
     </nav>
   </div>
 
@@ -129,13 +128,9 @@
 
   <!-- Croix à gauche + widget météo -->
   <div id="weatherWrapper">
-    <button id="weatherCloseBtn" type="button" aria-label="Fermer le widget météo"
-            onclick="document.getElementById('weatherWrapper').style.display='none'">✖</button>
+    <button id="weatherCloseBtn" type="button" aria-label="Fermer le widget météo" onclick="document.getElementById('weatherWrapper').style.display='none'">✖</button>
     <div id="weatherContainer">
-      <iframe id="widget_autocomplete_preview"
-        width="300" height="150" frameborder="0"
-        src="https://meteofrance.com/widget/prevision/051790##0C1E3C"
-        title="Prévisions Veynes par Météo-France">
+      <iframe id="widget_autocomplete_preview" width="300" height="150" frameborder="0" src="https://meteofrance.com/widget/prevision/051790##0C1E3C" title="Prévisions Veynes par Météo-France">
       </iframe>
     </div>
   </div>
@@ -171,5 +166,11 @@
       `;
     }
   </script>
-</body>
-</html>
+
+
+
+  
+
+
+
+</body></html>
